swal working now in contact form

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -257,7 +257,7 @@
             </form>
           </div>End Contact Form -->
 
-            <div class="col-lg-8">
+            <!-- <div class="col-lg-8">
               <form
                 id="contactForm"
                 class="php-email-form"
@@ -334,6 +334,84 @@
                     </div>
 
                     <button type="submit">Send Message</button>
+                  </div>
+                </div>
+              </form>
+            </div> -->
+
+            <div class="col-lg-8">
+              <form
+                id="contactForm"
+                class="php-email-form"
+                data-aos="fade-up"
+                data-aos-delay="200"
+                onsubmit="return false;"
+              >
+                <div class="row gy-4">
+                  <div class="col-md-6">
+                    <input
+                      type="text"
+                      name="name"
+                      class="form-control"
+                      placeholder="Your Name"
+                      required
+                    />
+                  </div>
+
+                  <div class="col-md-6">
+                    <input
+                      type="email"
+                      name="email"
+                      class="form-control"
+                      placeholder="Your Email"
+                      required
+                    />
+                  </div>
+
+                  <div class="col-md-6">
+                    <input
+                      type="tel"
+                      name="number"
+                      class="form-control"
+                      placeholder="Mobile Number"
+                      pattern="[0-9]{10}"
+                      title="Enter a valid 10-digit mobile number"
+                      required
+                    />
+                  </div>
+
+                  <div class="col-md-6">
+                    <input
+                      type="text"
+                      name="qualification"
+                      class="form-control"
+                      placeholder="Your Qualification"
+                      required
+                    />
+                  </div>
+
+                  <div class="col-md-12">
+                    <input
+                      type="text"
+                      name="subject"
+                      class="form-control"
+                      placeholder="Subject"
+                      required
+                    />
+                  </div>
+
+                  <div class="col-md-12">
+                    <textarea
+                      name="message"
+                      class="form-control"
+                      rows="6"
+                      placeholder="Message"
+                      required
+                    ></textarea>
+                  </div>
+
+                  <div class="col-md-12 text-center">
+                    <button type="submit" id="submitBtn">Send Message</button>
                   </div>
                 </div>
               </form>
