exam page footer links added

--- a/pages/exam.html
+++ b/pages/exam.html
@@ -244,12 +244,12 @@
           <h4>Useful Links</h4>
           <ul>
             <li><a href="../index.html">Home</a></li>
-            <li><a href="./pages/about.html">About us</a></li>
-            <li><a href="./pages/courses.html">Courses</a></li>
-            <li><a href="./pages/events.html">Events</a></li>
-            <li><a href="./pages/exam.html">Exam</a></li>
-            <li><a href="./pages/terms.html">Terms</a></li>
-            <li><a href="./pages/privacypolicy.html">Privacy policy</a></li>
+            <li><a href="about.html">About us</a></li>
+            <li><a href="courses.html">Courses</a></li>
+            <li><a href="events.html">Events</a></li>
+            <li><a href="exam.html">Exam</a></li>
+            <li><a href="terms.html">Terms</a></li>
+            <li><a href="privacypolicy.html">Privacy policy</a></li>
           </ul>
         </div>
 
